Some packages, cites and notes on lambda-calculus

--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -8,3 +8,14 @@
   year={1999},
   publisher={Cambridge Univ Press}
 }
+
+@article{church1936unsolvable,
+  title={An unsolvable problem of elementary number theory},
+  author={Church, Alonzo},
+  journal={American journal of mathematics},
+  volume={58},
+  number={2},
+  pages={345--363},
+  year={1936},
+  publisher={JSTOR}
+}
