Some notes on motivation

--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -19,3 +19,33 @@
   year={1936},
   publisher={JSTOR}
 }
+
+@article{howard1980formulae,
+  title={The formulae-as-types notion of construction},
+  author={Howard, William A},
+  journal={To HB Curry: essays on combinatory logic, lambda calculus and formalism},
+  volume={44},
+  pages={479--490},
+  year={1980}
+}
+
+@article{coquand1988calculus,
+  title={The calculus of constructions},
+  author={Coquand, Thierry and Huet, G{\'e}rard},
+  journal={Information and computation},
+  volume={76},
+  number={2-3},
+  pages={95--120},
+  year={1988},
+  publisher={Elsevier}
+}
+
+@article{martin1975intuitionistic,
+  title={An intuitionistic theory of types: Predicative part},
+  author={Martin-L{\"o}f, Per},
+  journal={Studies in Logic and the Foundations of Mathematics},
+  volume={80},
+  pages={73--118},
+  year={1975},
+  publisher={Elsevier}
+}
