started to rewrite motivation =(

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -8,10 +8,10 @@
     position           = {студента},
     group              = 604,
     author             = {Жаворонков Эдгар Андреевич},
-    supervisorPosition = {},
+    supervisorPosition = {преп.},
     supervisor         = {Исаев В.\,И.},
-    reviewerPosition   = {доцент},
-    reviewer           = {Москвин Д.\,Н.},
+    reviewerPosition   = {},
+    reviewer           = {},
     chairHeadPosition  = {д.\,ф.-м.\,н., профессор},
     chairHead          = {Омельченко А.\,В.},
 }
