--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -1,7 +1,13 @@
 \section*{Введение}
 
+Программирование(да и не только) использует связывание имен и альфа-эквивалентность. Как следствие, очень часто возникает проблема коллизий в именах переменных, обозначениях и т.д. %Вот тут надо как-то аккуратно ввернуть про лямбда-исчисление и вот это все, но я не могу уложить в голове эту мысль =(%
+
+% Суда же перенести мотивацию из motivation.tex
+
 Система типов в языке программирования позволяет выражать свойства программы, написанной на этом языке. Соответственно, чем мощнее система типов, тем больше инвариантов программ мы можем выразить. Языки с зависимыми типами являют собой венец эволюции и позволяют в полной мере описывать спецификацию программ. Кроме того, являясь полноценной логикой, эти языки могут использоваться для формализации математики. В работе делается попытка формализовать некоторые свойства $\lambda$-исчисления -- формальной системы, лежащей в основе функционального программирования.
 
 В первой главе будет дан анализ предметной области, краткое введение в $\lambda$-исчисление. Будет дана мотивация к постановке цели, непосредственно цель и задачи, решение которых необходимо для её достижения. Будут рассмотрены уже существующие решения и описаны их достоинства и недостатки.
 
-Во второй главе будут рассмотрены различные представления $\lambda$-термов. Предполагается описание различных свойств, присущих каждому из представлений и их формализация.
+Во второй главе будут описаны три представления $\lambda$-термов. Для каждого из представлений мы определим характерные свойства и покажем, почему они верны. Кроме того, мы покажем, что эти представления эквивалентны между собой.
+
+В третьей главе предполагается описание деталей реализации. Мы опишем язык, с помощью которого предлагается формализовать рассмотренные во второй главе представления и опишем тонкие моменты, связанные с реализацией.
