started second chapter, some TODOs in first

--- a/thesis/chapter_one.tex
+++ b/thesis/chapter_one.tex
@@ -1,6 +1,6 @@
-\section{Анализ и описание предметной области}
+\section{Описание предметной области}
 
 \input{chapter_one/lambda}
-\input{chapter_one/motivation}
+% \input{chapter_one/motivation}
 \input{chapter_one/tasks}
 \input{chapter_one/others}
