--- a/thesis/chapter_two.tex
+++ b/thesis/chapter_two.tex
@@ -1,5 +1,8 @@
 \section{Представления \texorpdfstring{$\lambda$}{лямбда}-термов}
 
+
+
 \input{chapter_two/named}
 \input{chapter_two/debruijn}
 \input{chapter_two/monad}
+\input{chapter_two/transformations}
