--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -1,13 +1,11 @@
 \section*{Введение}
 
-Программирование(да и не только) использует связывание имен и альфа-эквивалентность. Как следствие, очень часто возникает проблема коллизий в именах переменных, обозначениях и т.д. %Вот тут надо как-то аккуратно ввернуть про лямбда-исчисление и вот это все, но я не могу уложить в голове эту мысль =(%
+Верификация программного обеспечения используется в важнейших отраслях индустрии разработки ПО и включает в себя формальные рассуждения о программах и их свойствах. Так как языки программирования используют связывание имен, то в программах на них зачастую возникают проблема коллизий в именах переменных, функций и других конструкций.
 
-% Суда же перенести мотивацию из motivation.tex
+Соответственно, для того, чтобы формально рассуждать о свойствах программ необходима формальная система, позволяющая решать вышеозначенную проблему. Пример такой системы -- это $\lambda$-исчисление, лежащее в основе функционального программирования. В работе делается попытка формализовать различные представления этой системы и понять, с каким из них наиболее удобно работать.
 
-Система типов в языке программирования позволяет выражать свойства программы, написанной на этом языке. Соответственно, чем мощнее система типов, тем больше инвариантов программ мы можем выразить. Языки с зависимыми типами являют собой венец эволюции и позволяют в полной мере описывать спецификацию программ. Кроме того, являясь полноценной логикой, эти языки могут использоваться для формализации математики. В работе делается попытка формализовать некоторые свойства $\lambda$-исчисления -- формальной системы, лежащей в основе функционального программирования.
-
-В первой главе будет дан анализ предметной области, краткое введение в $\lambda$-исчисление. Будет дана мотивация к постановке цели, непосредственно цель и задачи, решение которых необходимо для её достижения. Будут рассмотрены уже существующие решения и описаны их достоинства и недостатки.
+В первой главе будет дан анализ предметной области и краткое введение в $\lambda$-исчисление. Мы обозначим цель работы и задачи, решение которых необходимо для её достижения. Будут рассмотрены уже существующие решения и описаны их достоинства и недостатки.
 
 Во второй главе будут описаны три представления $\lambda$-термов. Для каждого из представлений мы определим характерные свойства и покажем, почему они верны. Кроме того, мы покажем, что эти представления эквивалентны между собой.
 
-В третьей главе предполагается описание деталей реализации. Мы опишем язык, с помощью которого предлагается формализовать рассмотренные во второй главе представления и опишем тонкие моменты, связанные с реализацией.
+В третьей главе предполагается описание деталей реализации. Мы опишем язык, с помощью которого предлагается формализовать рассмотренные во второй главе представления а так же тонкие моменты, характерные для реализации.
