--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -49,3 +49,39 @@
   year={1975},
   publisher={Elsevier}
 }
+
+@inproceedings{nikolas1972bruijn,
+  title={Lambda calculus notation with nameless dummies, a tool for automatic formula manipulation, with application to the {Church}-{Rosser} theorem},
+  author={De Bruijn, Nicolaas Govert},
+  booktitle={Indagationes Mathematicae (Proceedings)},
+  volume={75},
+  number={5},
+  pages={381--392},
+  year={1972},
+  organization={Elsevier}
+}
+
+@article{kamareddine1998bridging,
+    title={Bridging {De Bruijn} indices and variable names in explicit substitutions calculi},
+    author={Kamareddine, Fairouz and R{\'\i}os, Alejandro},
+    journal={Logic Journal of IGPL},
+    volume={6},
+    number={6},
+    pages={843--874},
+    year={1998},
+    publisher={Oxford Univ Press}
+}
+
+@online{lambdaForm,
+  author = {Kazuhiko Sakaguchi},
+  title = {A Formalization of Typed and Untyped λ-Calculi in SSReflect-Coq and Agda2},
+  url = {https://git.io/vHtUp},
+  urldate = {2017-05-23}
+}
+
+@misc{barendregt1993lambda,
+  title={Lambda calculi with types, Handbook of logic in computer science (vol. 2): background: computational structures},
+  author={Barendregt, HP},
+  year={1993},
+  publisher={Oxford University Press, Inc., New York, NY}
+}
