some notes on second chapter

--- a/thesis/chapter_two.tex
+++ b/thesis/chapter_two.tex
@@ -1,8 +1,8 @@
 \section{Представления \texorpdfstring{$\lambda$}{лямбда}-термов}
 
-
+В этом разделе мы опишем три представления $\lambda$-термов: именованное, неименованное(через индексы Де Брауна) и монадическое. Мы опишем, как кодируются типы данных для термов в синтаксисе \textbf{Haskell}-подобного языка, определим характерные свойства для каждого представления и покажем, почему они верны. Кроме того, мы установим соответствие между всеми представлениями.
 
 \input{chapter_two/named}
 \input{chapter_two/debruijn}
 \input{chapter_two/monad}
-\input{chapter_two/transformations}
+\input{chapter_two/conversions}
