--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -8,4 +8,4 @@
 
 Во второй главе будут описаны три представления $\lambda$-термов. Для каждого из представлений мы определим характерные свойства и покажем, почему они верны. Кроме того, мы покажем, что эти представления эквивалентны между собой.
 
-В третьей главе предполагается описание деталей реализации. Мы опишем язык, с помощью которого предлагается формализовать рассмотренные во второй главе представления а так же тонкие моменты, характерные для реализации.
+В третьей главе предполагается описание деталей реализации. Мы опишем язык, с помощью которого предлагается формализовать рассмотренные во второй главе представления а так же тонкие моменты, с которыми пришлось столкнуться в ходе выполнения работы.
