--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -10,8 +10,8 @@
     author             = {Жаворонков Эдгар Андреевич},
     supervisorPosition = {преп.},
     supervisor         = {Исаев В.\,И.},
-    reviewerPosition   = {},
-    reviewer           = {},
+    reviewerPosition   = {ООО "ИнтеллиДжей Лабс", программист},
+    reviewer           = {Березун Д.\,А.},
     chairHeadPosition  = {д.\,ф.-м.\,н., профессор},
     chairHead          = {Омельченко А.\,В.},
 }
