major notes on lambda calculus, trying to finish second chapter

--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -9,6 +9,28 @@
   publisher={Cambridge Univ Press}
 }
 
+@article{schonfinkel1924bausteine,
+  title={{\"U}ber die Bausteine der mathematischen Logik},
+  author={Sch{\"o}nfinkel, Moses},
+  journal={Mathematische Annalen},
+  volume={92},
+  number={3},
+  pages={305--316},
+  year={1924},
+  publisher={Springer}
+}
+
+@article{curry1930grundlagen,
+  title={Grundlagen der kombinatorischen Logik},
+  author={Curry, Haskell B},
+  journal={American journal of mathematics},
+  volume={52},
+  number={4},
+  pages={789--834},
+  year={1930},
+  publisher={JSTOR}
+}
+
 @article{church1936unsolvable,
   title={An unsolvable problem of elementary number theory},
   author={Church, Alonzo},
@@ -18,6 +40,17 @@
   pages={345--363},
   year={1936},
   publisher={JSTOR}
+}
+
+@article{landin1964mechanical,
+  title={The mechanical evaluation of expressions},
+  author={Landin, Peter J},
+  journal={The Computer Journal},
+  volume={6},
+  number={4},
+  pages={308--320},
+  year={1964},
+  publisher={Br Computer Soc}
 }
 
 @article{howard1980formulae,
@@ -75,8 +108,15 @@
 @online{lambdaForm,
   author = {Kazuhiko Sakaguchi},
   title = {A Formalization of Typed and Untyped λ-Calculi in SSReflect-Coq and Agda2},
-  url = {https://git.io/vHtUp},
+  url = {https://goo.gl/WtcdZE},
   urldate = {2017-05-23}
+}
+
+@online{bound,
+  author = {Edward A. Kmett},
+  title = "bound: Making de Bruijn Succ Less",
+  url = {https://goo.gl/TKhGDn},
+  urldate = {2017-05-27}
 }
 
 @misc{barendregt1993lambda,
