major edits on monad terms. proofs to do

--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -114,9 +114,16 @@
 
 @online{bound,
   author = {Edward A. Kmett},
-  title = "bound: Making de Bruijn Succ Less",
+  title = {"bound: Making de Bruijn Succ Less"},
   url = {https://goo.gl/TKhGDn},
   urldate = {2017-05-27}
+}
+
+@online{kleisliArrows,
+  author = {Haskell Wiki},
+  title = {Arrow tutorial},
+  url = {https://goo.gl/bIiCsy},
+  urldate = {2017-05-29}
 }
 
 @misc{barendregt1993lambda,
