--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -2,9 +2,13 @@
 
 Верификация программного обеспечения используется в важнейших отраслях индустрии разработки ПО и включает в себя формальные рассуждения о программах и их свойствах. Так как языки программирования используют связывание имен, то в программах на них зачастую возникают проблема коллизий в именах переменных, функций и других конструкций.
 
-Соответственно, для того, чтобы формально рассуждать о свойствах программ необходима формальная система, позволяющая решать вышеозначенную проблему. Пример такой системы -- это $\lambda$-исчисление, лежащее в основе функционального программирования. В работе делается попытка формализовать различные представления этой системы и понять, с каким из них наиболее удобно работать.
+Языки программирования или средства для разработки пытаются сами решить эту проблему. Например анализатор кода в среде разработке может подсказать о том, что такое имя уже занято и программисту следует придумать новое. Некоторые языки разрешают имена с помощью системы модулей(или пространств имен, как например в языке C++).
 
-В первой главе будет дан анализ предметной области и краткое введение в $\lambda$-исчисление. Мы обозначим цель работы и задачи, решение которых необходимо для её достижения. Будут рассмотрены уже существующие решения и описаны их достоинства и недостатки.
+Более того, иногда возникает желание рассматривать конструкции в языке программирования с точностью до имен параметров. Это полезно, например, при поиске фрагментов кода, которые производят одинаковые вычисления или подчиняются некоторому общему шаблону. Пример таких фрагментов -- всевозможные циклы и обходы контейнеров.
+
+Соответственно, для того, чтобы доказывать какие-либо свойства программ необходима формальная система, позволяющая решать проблему коллизий имен и формально описывающая отношение так называемой $\alpha$-эквивалентности -- эквивалентности в поведении конструкций с разными именами формальных параметров. Пример такой системы -- это $\lambda$-исчисление, лежащее в основе функционального программирования. В работе делается попытка формализовать различные представления этой системы и понять, с каким из них наиболее удобно работать.
+
+В первой главе будет дан анализ предметной области, краткое описание $\lambda$-исчисления. Мы обозначим цель работы и задачи, решение которых необходимо для её достижения. Будут рассмотрены уже существующие решения и описаны их достоинства и недостатки.
 
 Во второй главе будут описаны три представления $\lambda$-термов. Для каждого из представлений мы определим характерные свойства и покажем, почему они верны. Кроме того, мы покажем, что эти представления эквивалентны между собой.
 
