--- a/thesis/spbau-diploma.cls
+++ b/thesis/spbau-diploma.cls
@@ -338,4 +338,4 @@
 \theoremstyle{plain}
 \newtheorem{lemma}{Лемма}
 \theoremstyle{definition}
-\newtheorem{definition}{Определение}
+\newtheorem*{definition}{Определение}
