--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -7,10 +7,9 @@
 
 Более того, иногда возникает желание рассматривать конструкции в языке программирования с точностью до имен параметров. Это полезно, например, при поиске фрагментов кода, которые производят одинаковые вычисления или подчиняются некоторому общему шаблону. Пример таких фрагментов -- всевозможные циклы и обходы контейнеров.
 
-Соответственно, для того, чтобы доказывать какие-либо свойства программ необходима формальная система, позволяющая решать проблему коллизий имен и формально описывающая отношение так называемой $\alpha$-эквивалентности -- эквивалентности в поведении конструкций с разными именами формальных параметров. Пример такой системы -- это $\lambda$-исчисление, лежащее в основе функционального программирования. В работе делается попытка формализовать различные представления этой системы и понять, с каким из них наиболее удобно работать.
+Соответственно, для того, чтобы доказывать какие-либо свойства программ необходима формальная система, позволяющая решать проблему коллизий имен и формально описывающая отношение так называемой $\alpha$-эквивалентности -- эквивалентности в поведении конструкций с разными именами формальных параметров. Пример такой системы -- это $\lambda$-исчисление, лежащее в основе функциональных языков программирования. В работе делается попытка формализовать различные представления этой системы и понять, с каким из них наиболее удобно работать.
 
 \paragraph{План работы}
-
 В первой главе будет дан анализ предметной области, краткое описание $\lambda$-исчисления. Мы обозначим цель работы и задачи, решение которых необходимо для её достижения. Кроме того, будут рассмотрены уже существующие решения и описаны их отличия от представленного в работе.
 
 Во второй главе будут описаны три представления $\lambda$-термов. Для каждого из представлений мы определим характерные свойства и покажем, почему они верны. Кроме того, мы покажем, что эти представления эквивалентны между собой.
