--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -132,3 +132,11 @@
   year={1993},
   publisher={Oxford University Press, Inc., New York, NY}
 }
+
+@book{norell2007towards,
+  title={Towards a practical programming language based on dependent type theory},
+  author={Norell, Ulf},
+  volume={32},
+  year={2007},
+  publisher={Citeseer}
+}
