appendices and refactor

--- a/thesis/chapter_one.tex
+++ b/thesis/chapter_one.tex
@@ -1,5 +1,7 @@
 \section{Описание предметной области}
 
 \input{chapter_one/lambda}
+\input{chapter_one/types}
+\input{chapter_one/curry_howard}
 \input{chapter_one/tasks}
-\input{chapter_one/others}
+\input{chapter_one/related}
