--- a/thesis/chapter_three.tex
+++ b/thesis/chapter_three.tex
@@ -1,5 +1,5 @@
 \section{Особенности реализации}
-
+\label{sec:impl}
 Здесь будут описаны особенности реализации. Мы опишем язык, с помощью которого формализовывались все представления. Для каждого представления мы опишем тонкие моменты, с которыми пришлось иметь дело в ходе выполнения работы.
 
 \input{chapter_three/vclang}
