--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -112,6 +112,115 @@
   urldate = {2017-05-23}
 }
 
+@article{mckinna1999some,
+  title={Some lambda calculus and type theory formalized},
+  author={McKinna, James and Pollack, Robert},
+  journal={Journal of Automated Reasoning},
+  volume={23},
+  number={3},
+  pages={373--409},
+  year={1999},
+  publisher={Springer}
+}
+
+@article{shankar1988mechanical,
+  title={A mechanical proof of the Church-Rosser theorem},
+  author={Shankar, Natarajan},
+  journal={Journal of the ACM (JACM)},
+  volume={35},
+  number={3},
+  pages={475--522},
+  year={1988},
+  publisher={ACM}
+}
+
+@article{altenkirch1993formalization,
+  title={A formalization of the strong normalization proof for System F in LEGO},
+  author={Altenkirch, Thorsten},
+  journal={Typed Lambda Calculi and Applications},
+  pages={13--28},
+  year={1993},
+  publisher={Springer}
+}
+
+@article{huet1994residual,
+  title={Residual theory in $\lambda$-calculus: A formal development},
+  author={Huet, G{\'e}rard},
+  journal={Journal of Functional Programming},
+  volume={4},
+  number={03},
+  pages={371--394},
+  year={1994},
+  publisher={Cambridge Univ Press}
+}
+
+@phdthesis{barras1996coq,
+  title={Coq en coq},
+  author={Barras, Bruno},
+  year={1996},
+  school={INRIA}
+}
+
+@article{nipkow1996more,
+  title={More Church-Rosser proofs (in isabelle/hol)},
+  author={Nipkow, Tobias},
+  journal={Automated Deduction—CADE-13},
+  pages={733--747},
+  year={1996},
+  publisher={Springer}
+}
+
+@article{gordon1996five,
+  title={Five axioms of alpha-conversion},
+  author={Gordon, Andrew and Melham, Tom},
+  journal={Theorem proving in higher order logics},
+  pages={173--190},
+  year={1996},
+  publisher={Springer}
+}
+
+@article{coquand1996algorithm,
+  title={An algorithm for type-checking dependent types},
+  author={Coquand, Thierry},
+  journal={Science of Computer Programming},
+  volume={26},
+  number={1-3},
+  pages={167--177},
+  year={1996},
+  publisher={Elsevier}
+}
+
+@inproceedings{gabbay1999new,
+  title={A new approach to abstract syntax involving binders},
+  author={Gabbay, Murdoch and Pitts, Andrew},
+  booktitle={Logic in Computer Science, 1999. Proceedings. 14th Symposium on},
+  pages={214--224},
+  year={1999},
+  organization={IEEE}
+}
+
+@article{sato1983theory,
+  title={Theory of symbolic expressions, I},
+  author={Sato, Masahiko},
+  journal={Theoretical Computer Science},
+  volume={22},
+  number={1-2},
+  pages={19--55},
+  year={1983},
+  publisher={Elsevier}
+}
+
+@article{stoughton1988substitution,
+  title={Substitution revisited},
+  author={Stoughton, Allen},
+  journal={Theoretical Computer Science},
+  volume={59},
+  number={3},
+  pages={317--325},
+  year={1988},
+  publisher={Elsevier}
+}
+
 @online{bound,
   author = {Edward A. Kmett},
   title = {"bound: Making de Bruijn Succ Less"},
