notes in third chapter

--- a/thesis/chapter_three.tex
+++ b/thesis/chapter_three.tex
@@ -1,5 +1,8 @@
 \section{Особенности реализации}
 \label{sec:impl}
-Здесь будут описаны особенности реализации. Мы опишем язык, с помощью которого формализовывались все представления. Для каждого представления мы опишем тонкие моменты, с которыми пришлось иметь дело в ходе выполнения работы.
+В этом разделе мы опишем язык, с помощью которого формализовывались все представления. Для каждого представления мы опишем тонкие моменты, с которыми пришлось иметь дело в ходе выполнения работы.
 
 \input{chapter_three/vclang}
+\input{chapter_three/index_impl}
+\input{chapter_three/monad_impl}
+\input{chapter_three/named_impl}
