--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -249,3 +249,17 @@
   year={2007},
   publisher={Citeseer}
 }
+
+@article{isaev2016model,
+  title={Model Structures on Categories of Models of Type Theories},
+  author={Isaev, Valery},
+  journal={arXiv preprint arXiv:1607.07407},
+  year={2016}
+}
+
+@article{cohen2016cubical,
+  title={Cubical type theory: a constructive interpretation of the univalence axiom},
+  author={Cohen, Cyril and Coquand, Thierry and Huber, Simon and M{\"o}rtberg, Anders},
+  journal={arXiv preprint arXiv:1611.02108},
+  year={2016}
+}
