--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -8,9 +8,9 @@
     position           = {студента},
     group              = 604,
     author             = {Жаворонков Эдгар Андреевич},
-    supervisorPosition = {преп.},
+    supervisorPosition = {каф. МиИТ, преп.},
     supervisor         = {Исаев В.\,И.},
-    reviewerPosition   = {ООО "ИнтеллиДжей Лабс", программист},
+    reviewerPosition   = {ООО <<ИнтеллиДжей Лабс>>, программист},
     reviewer           = {Березун Д.\,А.},
     chairHeadPosition  = {д.\,ф.-м.\,н., профессор},
     chairHead          = {Омельченко А.\,В.},
