notes on monad impl and minor edits in other sections

--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -235,6 +235,13 @@
   urldate = {2017-05-29}
 }
 
+@online{traversable,
+  author = {Hackage},
+  title = {Data.Traversable},
+  url = {https://goo.gl/JZ2xfa},
+  urldate = {2017-06-02}
+}
+
 @misc{barendregt1993lambda,
   title={Lambda calculi with types, Handbook of logic in computer science (vol. 2): background: computational structures},
   author={Barendregt, HP},
