--- a/thesis/outro.tex
+++ b/thesis/outro.tex
@@ -1,3 +1,8 @@
 \section*{Заключение}
 
-Здесь будет заключение. Мы сделаем выводы, и скажем какие-то последние слова.
+% Снова примерный план того, что хочется увидеть:
+% \begin{enumerate}
+%   \item Что ты сделал в ходе выполнения работы
+%   \item Какие недостатки есть в твоем решении
+%   \item Какое дальнейшее развитие может быть у твоей работы
+% \end{enumerate}
