--- a/thesis/appendices.tex
+++ b/thesis/appendices.tex
@@ -3,6 +3,7 @@
 \section{Пример формализации монадического представления термов}
 \label{apendix:monad}
 В этом приложении приведен пример кода на языке Vclang, формализующий монадическое представление термов, описанное в разделе~\ref{sec:monad}
-\inputminted[breaklines=true, fontsize=\scriptsize]{haskell}{code/properties.hs}
+
+\inputminted[breaklines=true, fontsize=\scriptsize]{text}{code/properties.hs}
 
 \end{appendices}
