--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -1,15 +1,17 @@
 \section*{Введение}
 
-\paragraph{Мотивация}
 Верификация программного обеспечения используется в важнейших отраслях индустрии разработки программного обеспечения и включает в себя формальные рассуждения о программах и их свойствах. Так как языки программирования используют связывание имен, то в программах на них зачастую возникают проблема коллизий в именах переменных, функций и других конструкций.
 
 Языки программирования или средства для разработки пытаются сами решить эту проблему. Например анализатор кода в среде разработке может подсказать о том, что такое имя уже занято и программисту следует придумать новое. Некоторые языки разрешают имена с помощью системы модулей(или пространств имен, как например в языке C++).
 
 Более того, иногда возникает желание рассматривать конструкции в языке программирования с точностью до имен параметров. Это полезно, например, при поиске фрагментов кода, которые производят одинаковые вычисления или подчиняются некоторому общему шаблону. Пример таких фрагментов -- всевозможные циклы и обходы контейнеров.
 
-Соответственно, для того, чтобы доказывать какие-либо свойства программ необходима формальная система, позволяющая решать проблему коллизий имен и формально описывающая отношение так называемой $\alpha$-эквивалентности -- эквивалентности в поведении конструкций с разными именами формальных параметров. Пример такой системы -- это $\lambda$-исчисление, лежащее в основе функциональных языков программирования. В работе делается попытка формализовать различные представления этой системы и понять, с каким из них наиболее удобно работать.
+Соответственно, для того, чтобы доказывать какие-либо свойства программ необходима формальная система, позволяющая решать проблемы коллизий имен и формально описывающая отношение так называемой $\alpha$-эквивалентности -- эквивалентности в поведении конструкций с разными именами формальных параметров. Пример такой системы -- это $\lambda$-исчисление, лежащее в основе функциональных языков программирования.
 
-\paragraph{План работы}
+Существуют различные представления этой системы, которые по-разному решают описанные выше проблемы. Например, в именованном представлении у переменных есть имена и нам нужно рассматривать термы с точностью до имен параметров функций. Есть неименованное представление, в котором вместо имен переменных используются их позиции в контексте, или расстояние до конструкции, в которой произошло связывание. Есть и более общее представление -- монадическое, когда термы наделяются структурой монады, известного объекта в теории категорий. Свойства монады в таком представлении являются аналогами свойств термов в других представлениях.
+
+В работе делается попытка формализовать различные представления этой системы и понять, с каким из них наиболее удобно работать.
+
 В первой главе будет дан анализ предметной области, краткое описание $\lambda$-исчисления. Мы обозначим цель работы и задачи, решение которых необходимо для её достижения. Кроме того, будут рассмотрены уже существующие решения и описаны их отличия от представленного в работе.
 
 Во второй главе будут описаны три представления $\lambda$-термов. Для каждого из представлений мы определим характерные свойства и покажем, почему они верны. Кроме того, мы покажем, что эти представления эквивалентны между собой.
