--- a/thesis/outro.tex
+++ b/thesis/outro.tex
@@ -2,7 +2,18 @@
 
 % Снова примерный план того, что хочется увидеть:
 % \begin{enumerate}
-%   \item Что ты сделал в ходе выполнения работы
+%   \item Что ты содержательного сделал в ходе выполнения работы
+%   \item Чем твое решение лучше, чем осталльные
+%   \item Можешь вкратце сказать, что в качестве языка реализации использовался vclang -- экспериментальный инструмент
 %   \item Какие недостатки есть в твоем решении
 %   \item Какое дальнейшее развитие может быть у твоей работы
+%   \item Ссылку на исходники
 % \end{enumerate}
+
+В ходе выполнения работы была рассмотрена с новой точки зрения задача формализации лямбда-исчисления. Мы описали различные представления лямбда-термов, определили фундаментальную операцию подстановки и описали её свойства.
+
+В отличии от других решений этой задачи, мы установили соответствие между различными представлениями лямбда-термов. Кроме того, мы предложили формализацию монадического представления термов. Мы использовали экспериментальный язык, построенный на новой теории типов, которая позволяет описывать фактор-множества гораздо более удобным образом, нежели, например, \textbf{Agda}.
+
+Однако, работа не лишена недостатков. Технические проблемы в самом языке и сложность именованного представления для формализации привели к тому, что свойство ассоциативности для операции подстановки осталось неформализованным. В качестве решения этой проблемы можно использовать идеи, описанные в теории номинальных множеств. Мы оставим эти идеи, как направление дальнешего развития работы.
+
+Исходный код опубликован в публичном Git-репозитории и доступен по ссылке \url{https://github.com/edgarzhavoronkov/vclang-lib/tree/lambda_calculus/test/LC}
