notes on named impl

--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -270,3 +270,10 @@
   journal={arXiv preprint arXiv:1611.02108},
   year={2016}
 }
+
+@book{pitts2013nominal,
+  title={Nominal sets: Names and symmetry in computer science},
+  author={Pitts, Andrew M},
+  year={2013},
+  publisher={Cambridge University Press}
+}
