--- a/thesis/outro.tex
+++ b/thesis/outro.tex
@@ -14,6 +14,6 @@
 
 В отличии от других решений этой задачи, мы установили соответствие между различными представлениями лямбда-термов. Кроме того, мы предложили формализацию монадического представления термов. Мы использовали экспериментальный язык, построенный на новой теории типов, которая позволяет описывать фактор-множества гораздо более удобным образом, нежели, например, \textbf{Agda}.
 
-Однако, работа не лишена недостатков. Технические проблемы в самом языке и сложность именованного представления для формализации привели к тому, что свойство ассоциативности для операции подстановки осталось неформализованным. В качестве решения этой проблемы можно использовать идеи, описанные в теории номинальных множеств. Мы оставим эти идеи, как направление дальнешего развития работы.
+Однако, работа не лишена недостатков. Технические проблемы в самом языке и сложность именованного представления для формализации привели к тому, что свойство ассоциативности для операции подстановки осталось неформализованным. В качестве решения этой проблемы можно использовать идеи, описанные в теории номинальных множеств. Мы оставим эти идеи, как направление дальнейшего развития работы.
 
 Исходный код опубликован в публичном Git-репозитории и доступен по ссылке \url{https://github.com/edgarzhavoronkov/vclang-lib/tree/lambda_calculus/test/LC}
