--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -277,3 +277,12 @@
   year={2013},
   publisher={Cambridge University Press}
 }
+
+@inproceedings{altenkirch1999monadic,
+  title={Monadic presentations of lambda terms using generalized inductive types},
+  author={Altenkirch, Thorsten and Reus, Bernhard},
+  booktitle={Computer science logic},
+  pages={825--825},
+  year={1999},
+  organization={Springer}
+}
