--- a/thesis/outro.tex
+++ b/thesis/outro.tex
@@ -3,7 +3,7 @@
 % Снова примерный план того, что хочется увидеть:
 % \begin{enumerate}
 %   \item Что ты содержательного сделал в ходе выполнения работы
-%   \item Чем твое решение лучше, чем осталльные
+%   \item Чем твое решение лучше, чем остальные
 %   \item Можешь вкратце сказать, что в качестве языка реализации использовался vclang -- экспериментальный инструмент
 %   \item Какие недостатки есть в твоем решении
 %   \item Какое дальнейшее развитие может быть у твоей работы
@@ -12,7 +12,7 @@
 
 В ходе выполнения работы была рассмотрена с новой точки зрения задача формализации лямбда-исчисления. Мы описали различные представления лямбда-термов, определили фундаментальную операцию подстановки и описали её свойства.
 
-В отличии от других решений этой задачи, мы установили соответствие между различными представлениями лямбда-термов. Кроме того, мы предложили формализацию монадического представления термов. Мы использовали экспериментальный язык, построенный на новой теории типов, которая позволяет описывать фактор-множества гораздо более удобным образом, нежели, например, \textbf{Agda}.
+В отличии от других решений этой задачи, мы установили соответствие между различными представлениями лямбда-термов. Мы формализовали неименованное, монадическое и часть именованного представления термов. Мы выяснили, что с неименованным и монадическим представлением очень удобно работать в том смысле, что формальные определения без особых усилий перекладываются на язык доказателя теорем. Для этого мы использовали экспериментальный язык, построенный на новой теории типов, которая, в частности, позволяет описывать некоторые конструкции гораздо более удобным образом, нежели, например, \textbf{Agda}.
 
 Однако, работа не лишена недостатков. Технические проблемы в самом языке и сложность именованного представления для формализации привели к тому, что свойство ассоциативности для операции подстановки осталось неформализованным. В качестве решения этой проблемы можно использовать идеи, описанные в теории номинальных множеств. Мы оставим эти идеи, как направление дальнейшего развития работы.
 
