comments on second part of fixes, first part of fixes in third chapter and in intro

--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -1,16 +1,16 @@
 \section*{Введение}
 
-Верификация программного обеспечения используется в важнейших отраслях индустрии разработки программного обеспечения и включает в себя формальные рассуждения о программах и их свойствах. Так как языки программирования используют связывание имен, то в программах на них зачастую возникают проблема коллизий в именах переменных, функций и других конструкций.
+Верификация программного обеспечения используется в важнейших отраслях индустрии разработки программного обеспечения и включает в себя формальные рассуждения о программах и их свойствах. Так как языки программирования используют имена для идентификации сущностей(данные, функции и другие конструкции), то в программах зачастую возникают проблема коллизий. Она заключается в том, что разные сущности идентифицируются одним именем.
 
 Языки программирования или средства для разработки пытаются сами решить эту проблему. Например анализатор кода в среде разработки может подсказать о том, что такое имя уже занято и программисту следует придумать новое. Некоторые языки разрешают имена с помощью системы модулей(или пространств имен, как например в языке C++).
 
 Более того, иногда возникает желание рассматривать конструкции в языке программирования с точностью до имен параметров. Это полезно, например, при поиске фрагментов кода, которые производят одинаковые вычисления или подчиняются некоторому общему шаблону. Пример таких фрагментов -- всевозможные циклы и обходы контейнеров.
 
-Соответственно, для того, чтобы доказывать какие-либо свойства программ необходима формальная система, позволяющая решать проблемы коллизий имен и формально описывающая отношение так называемой $\alpha$-эквивалентности -- эквивалентности в поведении конструкций с разными именами формальных параметров. Пример такой системы -- это $\lambda$-исчисление, лежащее в основе функциональных языков программирования. Вычислительная семантика лямбда-исчисления обеспечивается посредством операции подстановки, которая обладает некоторыми базовыми свойствами.
+Соответственно, для того, чтобы доказывать какие-либо свойства программ необходима формальная система, позволяющая решать проблемы коллизий имен и формально описывающая отношение так называемой $\alpha$-эквивалентности -- эквивалентности в поведении конструкций с разными именами формальных параметров. Пример такой системы -- это $\lambda$-исчисление, лежащее в основе функциональных языков программирования. С помощью фундаментальной операции подстановки, мы можем не только записывать лямбда-выражения\footnote{Далее мы будем использовать термины <<лямбда-терм>>, <<$\lambda$-терм>>, <<лямбда-выражение>>, полагая их синонимами.}, но и сокращать их, другими словами, мы можем осуществлять процесс вычисления. Естественно, что операция подстановки удовлетворяет некоторым базовым свойствам, которые мы опишем далее.
 
-Существуют различные представления этой системы, по-разному решающие описанные выше проблемы. Например, в именованном представлении у переменных есть имена и нам нужно рассматривать термы с точностью до имен параметров функций. Есть неименованное представление, в котором вместо имен переменных используются их позиции в контексте, или расстояние до конструкции, в которой произошло связывание. Есть и более общее представление -- монадическое, когда термы наделяются структурой монады, известного объекта в теории категорий. Свойства монады в таком представлении являются аналогами свойств термов в других представлениях.
+Существуют различные представления этой системы, по-разному решающие описанные выше проблемы. Например, в именованном представлении у переменных есть имена и нам нужно рассматривать выражения с точностью до имен параметров функций. Существует неименованное представление, в котором, например, переменная -- это индекс в некотором глобальном хранилище переменных. Есть и более общее представление -- монадическое, когда термы наделяются структурой монады, известного объекта в теории категорий. Свойства монады в таком представлении являются аналогами свойств термов в других представлениях.
 
-В работе делается попытка формализовать различные представления этой системы и понять, с каким из них наиболее удобно работать.
+В работе делается попытка установить равенство между различными представлениями этой системы. Для этого мы планируем реализовать с помощью системы автоматического доказательства теорем эти представления, построить соответствия между этими представлениями и доказать их взаимно-однозначность.
 
 В первой главе будет дан анализ предметной области, краткое описание $\lambda$-исчисления. Мы обозначим цель работы и задачи, решение которых необходимо для её достижения. Кроме того, будут рассмотрены уже существующие решения и описаны их отличия от представленного в работе.
 
