--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -286,3 +286,14 @@
   year={1999},
   organization={Springer}
 }
+
+@article{berghofer2007head,
+  title={A head-to-head comparison of de Bruijn indices and names},
+  author={Berghofer, Stefan and Urban, Christian},
+  journal={Electronic Notes in Theoretical Computer Science},
+  volume={174},
+  number={5},
+  pages={53--67},
+  year={2007},
+  publisher={Elsevier}
+}
