notes on novelty

--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -297,3 +297,12 @@
   year={2007},
   publisher={Elsevier}
 }
+
+@inproceedings{tarau2015logic,
+  title={On logic programming representations of lambda terms: de Bruijn indices, compression, type inference, combinatorial generation, normalization},
+  author={Tarau, Paul},
+  booktitle={International Symposium on Practical Aspects of Declarative Languages},
+  pages={115--131},
+  year={2015},
+  organization={Springer}
+}
