--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -8,7 +8,7 @@
 
 Соответственно, для того, чтобы доказывать какие-либо свойства программ необходима формальная система, позволяющая решать проблемы коллизий имен и формально описывающая отношение так называемой $\alpha$-эквивалентности -- эквивалентности в поведении конструкций с разными именами формальных параметров. Пример такой системы -- это $\lambda$-исчисление, лежащее в основе функциональных языков программирования. С помощью фундаментальной операции подстановки, мы можем не только записывать лямбда-выражения\footnote{Далее мы будем использовать термины <<лямбда-терм>>, <<$\lambda$-терм>>, <<лямбда-выражение>>, полагая их синонимами.}, но и сокращать их, другими словами, мы можем осуществлять процесс вычисления. Естественно, что операция подстановки удовлетворяет некоторым базовым свойствам, которые мы опишем далее.
 
-Существуют различные представления этой системы, по-разному решающие описанные выше проблемы. Например, в именованном представлении у переменных есть имена и нам нужно рассматривать выражения с точностью до имен параметров функций. Существует неименованное представление, в котором, например, переменная -- это индекс в некотором глобальном хранилище переменных. Есть и более общее представление -- монадическое, когда термы наделяются структурой монады, известного объекта в теории категорий. Свойства монады в таком представлении являются аналогами свойств термов в других представлениях.
+Существуют различные представления этой системы, по-разному решающие описанные выше проблемы. Например, в именованном представлении у переменных есть имена и нам нужно рассматривать выражения с точностью до имен параметров функций. Существует неименованное представление, в котором, например, переменная -- это индекс в некотором глобальном хранилище переменных. Эти идеи можно обобщить и рассуждать о выражениях, используя методы теории категорий.
 
 В работе делается попытка установить равенство между различными представлениями этой системы. Для этого мы планируем реализовать с помощью системы автоматического доказательства теорем эти представления, построить соответствия между этими представлениями и доказать их взаимно-однозначность.
 
