notes on quotient types

--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -306,3 +306,21 @@
   year={2015},
   organization={Springer}
 }
+
+@inproceedings{chicli2002mathematical,
+  title={Mathematical quotients and quotient types in Coq},
+  author={Chicli, Laurent and Pottier, Lo{\"\i}c and Simpson, Carlos},
+  booktitle={International Workshop on Types for Proofs and Programs},
+  pages={95--107},
+  year={2002},
+  organization={Springer}
+}
+
+@inproceedings{cohen2013pragmatic,
+  title={Pragmatic quotient types in Coq},
+  author={Cohen, Cyril},
+  booktitle={International Conference on Interactive Theorem Proving},
+  pages={213--228},
+  year={2013},
+  organization={Springer}
+}
